# physical-ai-arxiv-feed

./: .gitignore  README.md  feed.json  pyproject.toml
.github/workflows/: arxiv-fact-feed.yml  tests.yml
arxiv_feed/: __init__.py  canonical.py  cli.py  contract.py  enrichment.py  feed.py  identity.py  oai.py  planner.py  projection.py  writer.py
config/: feed-producer.json
docs/: FEED.md
docs/adr/: 0001-arxiv-fact-feed.md
fixtures/contract/v1/: canonical-vectors.json  legacy-upsert-record.json  modern-upsert-record.json  scope.json
fixtures/oai/: error.xml  no-records.xml  page-1.xml  page-2.xml
schemas/feed/v1/: enrichment-task.schema.json  feed-root.schema.json  observation.schema.json  partition-manifest.schema.json  scope-index.schema.json  scope.schema.json  state-root.schema.json  status.schema.json
scopes/physical-ai-v1/: index.json  scope.json
scopes/physical-ai-v1/status/: latest.json
tests/: __init__.py  test_canonical.py  test_contract.py  test_enrichment.py  test_feed.py  test_identity.py  test_oai.py  test_planner.py  test_projection.py  test_schemas.py  test_writer.py
